# vidga

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp  spatialIndexPrototype.js  util.cpp  util.h
classes/SerDes/: SerDes.cpp  SerDes.h
classes/chromosomes/: simpleChromosome.cpp  simpleChromosome.h
classes/individual/: simpleIndividual.cpp  simpleIndividual.h
classes/population/: simplePopulation.cpp  simplePopulation.h
classes/renderers/: opencvRenderer.cpp  opencvRenderer.h
classes/shapes/: circle.cpp  circle.h
cuda/: cudaCircles.cu  cudaCircles.cuh
interfaces/chromosome/: chromosome.cpp  chromosome.h
interfaces/ga/: ga.cpp  ga.h
interfaces/individual/: individual.cpp  individual.h
interfaces/shape/: shape.cpp  shape.h
interfaces/shapes/: shape.cpp  shape.h
prototype/: Grid.hpp  main.cpp
